# segurodb

./: .gitignore  Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: bloom.rs  get.rs  get_many.rs  iter.rs
cli/: Cargo.toml
cli/src/: main.rs
segurodb/: Cargo.toml
segurodb/src/: collision.rs  database.rs  error.rs  find.rs  journal.rs  key.rs  lib.rs  metadata.rs  options.rs  prefix_tree.rs  space.rs  transaction.rs
segurodb/src/field/: error.rs  header.rs  iterator.rs  mod.rs  view.rs
segurodb/src/flush/: decision.rs  flush.rs  iterator.rs  mod.rs  writer.rs
segurodb/src/record/: append.rs  mod.rs  record.rs
segurodb/tests/: tests.rs
segurodb/tests/flushes/: flush_00.flush
