[package]
name = "segurodb"
version = "0.1.0"
authors = ["x <x@x.x>"]

[dependencies]
bit-vec = "0.4.4"
byteorder = "1.1"
error-chain = "0.11"
fs2 = "0.4"
hex-slice = "=0.1.2"
itertools = "0.7.3"
memmap = "0.5.2"
parking_lot = "0.4.8"
tiny-keccak = "1.3"

[dev-dependencies]
matches = "0.1"
quickcheck = "0.4"
tempdir = "0.3.5"
